# autogen-agent-template

./: .gitignore  README.md  env.template  pyproject.toml
app/: main.py
app/core/: config.py  constants.py
app/llm/: agent.py  client.py
app/services/: app_monitor.py
app/ui/: chanilit_ui.py
app/utils/: prompts.py
