[project]
name = "moma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen-ext[openai]>=0.7.5",
    "chainlit>=2.8.3",
    "comtypes>=1.4.13",
    "fastmcp>=2.12.4",
    "fpdf>=1.7.2",
    "ipykernel>=6.30.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyautogen>=0.10.0",
    "pypdf2>=3.0.1",
    "python-pptx>=1.0.2",
    "xlwings>=0.33.15",
]
